Rebrand to 'Word Royale' to avoid copyright issues
🏷️ Complete Rebranding:
- Changed main title from 'Wordle Battle Royale' to 'WORD ROYALE'
- Updated page title to 'Word Royale - Multiplayer Tournament'
- Modified package.json name and description
- Updated server console logs
- Changed keywords from 'wordle' to 'word-game'

⚖️ Copyright Compliance:
- Avoids potential trademark issues
- Maintains the same great gameplay
- Clean, professional branding
- Tournament focus emphasized

🎮 Same Great Game:
- All features and functionality identical
- Tournament elimination system
- Live scoring and multiplayer
- Just safer branding for public use

Ready for public deployment without copyright concerns!

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "wordle-battle-royale-server",
+  "name": "word-royale-server",
   "version": "1.0.0",
-  "description": "Multiplayer Wordle Battle Royale Server",
+  "description": "Multiplayer Word Royale Tournament Server",
   "main": "server.js",
   "scripts": {
     "start": "node server.js",
@@ -22,9 +22,9 @@
     "nodemon": "^3.0.2"
   },
   "keywords": [
-    "wordle",
+    "word-game",
     "multiplayer",
-    "battle-royale",
+    "tournament",
     "socket.io"
   ],
   "author": "",
